--- a/aboutme.html
+++ b/aboutme.html
@@ -10,9 +10,11 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
+
+  <!-- Navbar -->
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <div class="container-fluid bg-danger">
           <a class="navbar-brand" href="#">Nanda Nenz</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,25 +26,13 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              
-            </ul>
-            
+              </li>   
+            </ul>           
           </div>
         </div>
       </nav>
   </header>
+  <h2>Nanda's about me</h2>
 
  <div class="row">
   <div class="card" style="width: 18rem;">
@@ -55,7 +45,7 @@
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
+  <div class="card" style="width: 28rem;">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
