--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
   <h2>Nanda's about me</h2>
 
  <div class="row">
-  <div class="card" style="width: 18rem;">
+  <div class="card bg-danger" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
@@ -45,7 +45,7 @@
     </div>
   </div>
 
-  <div class="card" style="width: 28rem;">
+  <div class="card bg-danger" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
@@ -55,7 +55,7 @@
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
+  <div class="card bg-danger" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
