--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,13 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">About me</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-info" href="contact.html">Contact</a>
                   </li> 
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Projecten</a>
+                    <a class="nav-link" href="project.html">Projecten</a>
                   </li>     
                 </ul>           
               </div>
