--- a/project.html
+++ b/project.html
@@ -24,7 +24,7 @@
                     <a class="nav-link active" aria-current="page" href="index.html">About me</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>                   
+                    <a class="nav-link" href="contact.html">Contact</a>                   
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-info" href="#">Projecten</a>
