--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </header>
 
   <!-- about me cards -->
-  <h2>Nanda's about me</h2>
+  <h2>About Nanda</h2>
 
  <div class="row">
   <div class="card bg-danger" style="width: 18rem;">
