--- a/contact.html
+++ b/contact.html
@@ -35,30 +35,43 @@
           </nav>
     </header>
 
-   <!-- cards met socials -->
-  <div class="row">
-    <div class="col-md-4"></div>
+   <!-- cards met contacten -->
+  
+   <h2>Nanda's socials</h2>
+   <h5>Hier zijn de socials en contacten van Nanda te vinden</h5>
+
+   
+   <div class="row">
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="img/discordlogo.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text">Discord</p>
       </div>
     </div>
+  
+
+  
+    <div class="card" style="width: 18rem;">
+      <img src="img/instalogo.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Instagram</p>
+      </div>
+    </div>
+  
 
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="img/ytlogo.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text"><a src="https://www.youtube.com/channel/UCUN357eVG-l5P1psPOulhyA">YouTube</a></p>
       </div>
     </div>
-
-    <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
     </div>
-  </div>
+ 
+    <div class="card">
+     <h5>E-mail: rizkynu10@gmail.com</h5>
+     <h5>Tel: 0612770181</h5>
+    </div>
+  
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
