--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
   </div>
 
   <div class="card bg-danger" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="img/download.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title text-white">Studie</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-      <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <p class="card-text text-white">Nadat ik mijn middelbare school diploma heb.</p>
       <a href="#" class="card-link">Card link</a>    
     </div>
   </div> 
@@ -66,7 +66,9 @@
     <div class="card-body">
       <h5 class="card-title text-white">Afkomst</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-      <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <p class="card-text text-white">Ik ben geboren in Indonesie in de hoodfstad Jakarta. Een jaar na me geboort zijn me ouders en ik verhuisd naar
+        Nederland en hier ben ik verder opgegroeid. Mijn familie is ook Islamitisch.
+      </p>
       <a href="#" class="card-link">Card link</a>
     </div>
   </div>
