about me page verder verwerkt

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
       <h5 class="card-title text-white">Hobby's</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
       <p class="card-text text-white">Ik ga graag mee met vrienden uit en game ook met ze. Naast spellen op scherm vind ik bord en kaart spellen ook leuk. 
-        Tijdens de meeste vakanties reizen ik en mijn familie ook graag</p>
-      <a href="#" class="card-link">Card link</a>     
+        Tijdens de meeste vakanties reizen ik en mijn familie ook graag</p>  
     </div>
   </div>
 
@@ -56,8 +55,7 @@
     <div class="card-body">
       <h5 class="card-title text-white">Studie</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-      <p class="card-text text-white">Nadat ik mijn middelbare school diploma heb.</p>
-      <a href="#" class="card-link">Card link</a>    
+      <p class="card-text text-white">Nadat ik mijn middelbare school diploma heb gehaald ben ik naar mbo opleiding ict gegaan op het ROC Mondriaan</p>     
     </div>
   </div> 
 
@@ -69,7 +67,6 @@
       <p class="card-text text-white">Ik ben geboren in Indonesie in de hoodfstad Jakarta. Een jaar na me geboort zijn me ouders en ik verhuisd naar
         Nederland en hier ben ik verder opgegroeid. Mijn familie is ook Islamitisch.
       </p>
-      <a href="#" class="card-link">Card link</a>
     </div>
   </div>
  </div> 
