alle socials linked

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     <div class="card" style="width: 18rem;">
       <img src="img/discordlogo.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text">Discord</p>
+        <p class="card-text"><a href="https://discord.gg/FHMDRY6b">Discord</a></p>
       </div>
     </div>
   
@@ -54,7 +54,7 @@
     <div class="card" style="width: 18rem;">
       <img src="img/instalogo.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text">Instagram</p>
+        <p class="card-text"><a href="https://www.instagram.com/nanda.nenz/">Instagram</a></p>
       </div>
     </div>
   
@@ -62,7 +62,7 @@
     <div class="card" style="width: 18rem;">
       <img src="img/ytlogo.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text"><a src="https://www.youtube.com/channel/UCUN357eVG-l5P1psPOulhyA">YouTube</a></p>
+        <p class="card-text"><a href="https://www.youtube.com/channel/UCUN357eVG-l5P1psPOulhyA">YouTube</a></p>
       </div>
     </div>
     </div>
