cards in project pagina en nieuwe pagina

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,10 @@
                   </li> 
                   <li class="nav-item">
                     <a class="nav-link" href="project.html">Projecten</a>
-                  </li>     
+                  </li>   
+                  <li class="nav-item">
+                    <a class="nav-link" href="dw.html">De website</a>
+                  </li>   
                 </ul>           
               </div>
             </div>
@@ -37,9 +40,10 @@
 
    <!-- cards met contacten -->
   
+   <div class="title bg-white">
    <h2>Nanda's socials</h2>
    <h5>Hier zijn de socials en contacten van Nanda te vinden</h5>
-
+   </div>
    
    <div class="row">
     <div class="card" style="width: 18rem;">
@@ -51,7 +55,7 @@
   
 
   
-    <div class="card" style="width: 18rem;">
+    <div class="card ms-5" style="width: 18rem;">
       <img src="img/instalogo.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text"><a href="https://www.instagram.com/nanda.nenz/">Instagram</a></p>
@@ -59,7 +63,7 @@
     </div>
   
 
-    <div class="card" style="width: 18rem;">
+    <div class="card ms-5" style="width: 18rem;">
       <img src="img/ytlogo.png" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text"><a href="https://www.youtube.com/channel/UCUN357eVG-l5P1psPOulhyA">YouTube</a></p>
@@ -67,7 +71,7 @@
     </div>
     </div>
  
-    <div class="card">
+    <div class="card mt-4">
      <h5>E-mail: rizkynu10@gmail.com</h5>
      <h5>Tel: 0612770181</h5>
     </div>
