--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
               </li> 
               <li class="nav-item">
                 <a class="nav-link" href="project.html">Projecten</a>
-              </li>  
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="dw.html">de website</a>
+              </li>   
             </ul>           
           </div>
         </div>
@@ -37,8 +40,10 @@
   </header>
 
   <!-- about me cards -->
+  <div class="title bg-white">
   <h2>About Nanda</h2>
-  
+  </div>
+
  <div class="row">
   <div class="card bg-danger" style="width: 18rem;">
     <img src="img/gamepic.jpg " class="card-img-top" alt="...">
@@ -50,7 +55,7 @@
     </div>
   </div>
 
-  <div class="card bg-danger" style="width: 18rem;">
+  <div class="card bg-danger ms-5" style="width: 18rem;">
     <img src="img/download.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title text-white">Studie</h5>
@@ -59,7 +64,7 @@
     </div>
   </div> 
 
-  <div class="card bg-danger" style="width: 18rem;">
+  <div class="card bg-danger ms-5" style="width: 18rem;">
     <img src="img/Indopic.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title text-white">Afkomst</h5>
