--- a/project.html
+++ b/project.html
@@ -29,17 +29,74 @@
                   <li class="nav-item">
                     <a class="nav-link text-info" href="#">Projecten</a>
                   </li>   
+                  <li class="nav-item">
+                    <a class="nav-link" href="dw.html">De website</a>
+                  </li> 
                 </ul>           
               </div>
             </div>
           </nav>
       </header>
     
+      <!-- projecten cards -->
 
+    <div class="row">
+     <div class="card text-start" style="width: 18rem;">
+       <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+       <div class="card-body">
+         <h4 class="card-title"> </h4>
+         <p class="card-text">In dit</p>
+       </div>
+     </div>
 
+     <div class="card text-start ms-5" style="width: 18rem;">
+      <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+      <div class="card-body">
+        <h4 class="card-title"> </h4>
+        <p class="card-text">In dit</p>
+      </div>
+     </div>
+
+    <div class="card text-start ms-5" style="width: 18rem;">
+      <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+      <div class="card-body">
+        <h4 class="card-title"> </h4>
+        <p class="card-text">In dit</p>
+      </div>
+    </div>
+   </div> 
+
+<a></a>
+
+  <div class="row mt-4">
+    <div class="card text-start" style="width: 18rem;">
+      <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+      <div class="card-body">
+        <h4 class="card-title"> </h4>
+        <p class="card-text">In dit</p>
+      </div>
+    </div>
+
+    <div class="card text-start ms-5" style="width: 18rem;">
+      <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+      <div class="card-body">
+        <h4 class="card-title"> </h4>
+        <p class="card-text">In dit</p>
+      </div>
+    </div>
+
+    <div class="card text-start ms-5" style="width: 18rem;">
+      <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+      <div class="card-body">
+        <h4 class="card-title"> </h4>
+        <p class="card-text">In dit</p>
+      </div>
+    </div>
+  </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
+
