nieuwe files voor project pagina toegevoegd

--- a/project.html
+++ b/project.html
@@ -42,9 +42,9 @@
 
     <div class="row">
      <div class="card text-start" style="width: 18rem;">
-       <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+       <img class="card-img-top" src="img/Screenshot 2023-06-17 122854.png" alt="Title">
        <div class="card-body">
-         <h4 class="card-title"> </h4>
+        <a href="hoger lager/indexHL.html"> <h4 class="card-title">Hoger Lager</h4></a>
          <p class="card-text">In dit</p>
        </div>
      </div>
@@ -52,7 +52,7 @@
      <div class="card text-start ms-5" style="width: 18rem;">
       <img class="card-img-top" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
-        <h4 class="card-title"> </h4>
+        <a href=""> <h4 class="card-title">Whack a mole</h4></a>
         <p class="card-text">In dit</p>
       </div>
      </div>
@@ -60,7 +60,7 @@
     <div class="card text-start ms-5" style="width: 18rem;">
       <img class="card-img-top" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
-        <h4 class="card-title"> </h4>
+        <a href=""> <h4 class="card-title">Boter kaas en eieren</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
@@ -72,7 +72,7 @@
     <div class="card text-start" style="width: 18rem;">
       <img class="card-img-top" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
-        <h4 class="card-title"> </h4>
+        <a href="sd22-p03-project-webcatalogus-t1n-habibi-main/index.html"><h4 class="card-title">Webcatalogus</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
@@ -80,7 +80,7 @@
     <div class="card text-start ms-5" style="width: 18rem;">
       <img class="card-img-top" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
-        <h4 class="card-title"> </h4>
+        <a href=""> <h4 class="card-title">Hoger Lager</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
@@ -88,7 +88,7 @@
     <div class="card text-start ms-5" style="width: 18rem;">
       <img class="card-img-top" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
-        <h4 class="card-title"> </h4>
+        <a href=""> <h4 class="card-title">Hoger Lager</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
