de 4e pagina bootstrap gegeven

--- a/project.html
+++ b/project.html
@@ -40,6 +40,11 @@
     
       <!-- projecten cards -->
 
+      <div class="title bg-white">
+        <h2>Nanda's projecten 2022-23</h2>
+        <h5>Dit zijn projecten waar Nanda dit schooljaar heeft gemaakt</h5>
+      </div>
+
     <div class="row">
      <div class="card text-start" style="width: 18rem;">
        <img class="card-img-top" src="img/Screenshot 2023-06-17 122854.png" alt="Title">
