de code "target=_blank" gebruikt

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
     <div class="card" style="width: 18rem;">
       <img src="img/discordlogo.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text"><a href="https://discord.gg/FHMDRY6b">Discord</a></p>
+        <p class="card-text"><a href="https://discord.gg/FHMDRY6b" target="_blank">Discord</a></p>
       </div>
     </div>
   
@@ -58,7 +58,7 @@
     <div class="card ms-5" style="width: 18rem;">
       <img src="img/instalogo.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text"><a href="https://www.instagram.com/nanda.nenz/">Instagram</a></p>
+        <p class="card-text"><a href="https://www.instagram.com/nanda.nenz/" target="_blank">Instagram</a></p>
       </div>
     </div>
   
@@ -66,7 +66,7 @@
     <div class="card ms-5" style="width: 18rem;">
       <img src="img/ytlogo.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text"><a href="https://www.youtube.com/channel/UCUN357eVG-l5P1psPOulhyA">YouTube</a></p>
+        <p class="card-text"><a href="https://www.youtube.com/channel/UCUN357eVG-l5P1psPOulhyA" target="_blank">YouTube</a></p>
       </div>
     </div>
     </div>
