--- a/project.html
+++ b/project.html
@@ -49,13 +49,13 @@
      <div class="card text-start" style="width: 18rem;">
        <img class="card-img-top" src="img/Screenshot 2023-06-17 122854.png" alt="Title">
        <div class="card-body">
-        <a href="hoger lager/indexHL.html"> <h4 class="card-title">Hoger Lager</h4></a>
+        <a href="hoger lager/indexHL.html" target="_blank"> <h4 class="card-title">Hoger Lager</h4></a>
          <p class="card-text">In dit</p>
        </div>
      </div>
 
      <div class="card text-start ms-5" style="width: 18rem;">
-      <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+      <img class="card-img-top" src="img/whackamole.png" alt="Title">
       <div class="card-body">
         <a href=""> <h4 class="card-title">Whack a mole</h4></a>
         <p class="card-text">In dit</p>
@@ -63,7 +63,7 @@
      </div>
 
     <div class="card text-start ms-5" style="width: 18rem;">
-      <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+      <img class="card-img-top" src="img/bke.png" alt="Title">
       <div class="card-body">
         <a href=""> <h4 class="card-title">Boter kaas en eieren</h4></a>
         <p class="card-text">In dit</p>
@@ -75,9 +75,9 @@
 
   <div class="row mt-4">
     <div class="card text-start" style="width: 18rem;">
-      <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+      <img class="card-img-top" src="img/webcatalogus.png" alt="Title">
       <div class="card-body">
-        <a href="sd22-p03-project-webcatalogus-t1n-habibi-main/index.html"><h4 class="card-title">Webcatalogus</h4></a>
+        <a href="sd22-p03-project-webcatalogus-t1n-habibi-main/index.html" target="_blank"><h4 class="card-title">Webcatalogus</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
@@ -85,7 +85,7 @@
     <div class="card text-start ms-5" style="width: 18rem;">
       <img class="card-img-top" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
-        <a href=""> <h4 class="card-title">Hoger Lager</h4></a>
+        <a href=""> <h4 class="card-title">x</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
@@ -93,7 +93,7 @@
     <div class="card text-start ms-5" style="width: 18rem;">
       <img class="card-img-top" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
-        <a href=""> <h4 class="card-title">Hoger Lager</h4></a>
+        <a href=""> <h4 class="card-title">x</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
