4e pagina navbar gegegven en comment in de css

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="project.html">Projecten</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="dw.html">de website</a>
+                <a class="nav-link" href="dw.html">De website</a>
               </li>   
             </ul>           
           </div>
