--- a/dw.html
+++ b/dw.html
@@ -37,6 +37,11 @@
             </div>
           </nav>
       </header>
+
+      <div class="title bg-white">
+        <h2>Achter het maken van dit project</h2>
+        <h5>Hier laat het zien hoe Nanda's portfolio is gemaakt</h5>
+        </div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
