--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <img src="img/gamepic.jpg " class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title text-white">Hobby's</h5>
-      <p class="card-text text-white">Ik ga graag mee met vrienden uit en game ook met ze. Naast spellen op scherm vind ik bord en kaart spellen ook leuk. 
-        Tijdens de meeste vakanties reizen ik en mijn familie ook graag</p>  
+      <p class="card-text text-white">Ik ga graag mee met vrienden uit en game ook met ze. Naast spellen op scherm vind ik bord en kaart spellen ook erg leuk. 
+        Tijdens de meeste vakanties reizen ik en mijn familie ook graag.</p>  
     </div>
   </div>
 
@@ -58,7 +58,7 @@
     <img src="img/download.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title text-white">Studie</h5>
-      <p class="card-text text-white">Nadat ik mijn middelbare school diploma heb gehaald ben ik naar mbo opleiding ict gegaan op het ROC Mondriaan</p>     
+      <p class="card-text text-white">Nadat ik mijn middelbare school diploma heb gehaald ben ik naar mbo opleiding ict gegaan op het ROC Mondriaan.</p>     
     </div>
   </div> 
 
@@ -66,7 +66,7 @@
     <img src="img/Indopic.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title text-white">Afkomst</h5>
-      <p class="card-text text-white">Ik ben geboren in Indonesie in de hoodfstad Jakarta. Een jaar na me geboort zijn me ouders en ik verhuisd naar
+      <p class="card-text text-white">Ik ben geboren in Indonesië in de hoodfstad Jakarta. Een jaar na me geboorte zijn mijn ouders en ik verhuisd naar
         Nederland en hier ben ik verder opgegroeid. Mijn familie is ook Islamitisch.
       </p>
     </div>
