cards verbeterd met image marge

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
    
    <div class="row">
     <div class="card" style="width: 18rem;">
-      <img src="img/discordlogo.png" class="card-img-top" alt="...">
+      <img src="img/discordlogo.png" class="card-img-top mt-3" alt="...">
       <div class="card-body">
         <p class="card-text"><a href="https://discord.gg/FHMDRY6b" target="_blank">Discord</a></p>
       </div>
@@ -56,7 +56,7 @@
 
   
     <div class="card ms-5" style="width: 18rem;">
-      <img src="img/instalogo.jpg" class="card-img-top" alt="...">
+      <img src="img/instalogo.jpg" class="card-img-top mt-3" alt="...">
       <div class="card-body">
         <p class="card-text"><a href="https://www.instagram.com/nanda.nenz/" target="_blank">Instagram</a></p>
       </div>
@@ -64,7 +64,7 @@
   
 
     <div class="card ms-5" style="width: 18rem;">
-      <img src="img/ytlogo.png" class="card-img-top" alt="...">
+      <img src="img/ytlogo.png" class="card-img-top mt-3" alt="...">
       <div class="card-body">
         <p class="card-text"><a href="https://www.youtube.com/channel/UCUN357eVG-l5P1psPOulhyA" target="_blank">YouTube</a></p>
       </div>
