--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   </div>
 
  <div class="row">
-  <div class="card bg-danger" style="width: 18rem;">
-    <img src="img/gamepic.jpg " class="card-img-top" alt="...">
+  <div class="card bg-danger mt-5" style="width: 18rem;">
+    <img src="img/gamepic.jpg" class="card-img-top mt-3" alt="...">
     <div class="card-body">
       <h5 class="card-title text-white">Hobby's</h5>
       <p class="card-text text-white">Ik ga graag mee met vrienden uit en game ook met ze. Naast spellen op scherm vind ik bord en kaart spellen ook erg leuk. 
@@ -54,16 +54,16 @@
     </div>
   </div>
 
-  <div class="card bg-danger ms-5" style="width: 18rem;">
-    <img src="img/download.png" class="card-img-top" alt="...">
+  <div class="card bg-danger mt-5 ms-5" style="width: 18rem;">
+    <img src="img/download.png" class="card-img-top mt-3" alt="...">
     <div class="card-body">
       <h5 class="card-title text-white">Studie</h5>
       <p class="card-text text-white">Nadat ik mijn middelbare school diploma heb gehaald ben ik naar mbo opleiding ict gegaan op het ROC Mondriaan.</p>     
     </div>
   </div> 
 
-  <div class="card bg-danger ms-5" style="width: 18rem;">
-    <img src="img/Indopic.png" class="card-img-top" alt="...">
+  <div class="card bg-danger mt-5 ms-5" style="width: 18rem;">
+    <img src="img/Indopic.png" class="card-img-top mt-3" alt="...">
     <div class="card-body">
       <h5 class="card-title text-white">Afkomst</h5>
       <p class="card-text text-white">Ik ben geboren in Indonesië in de hoodfstad Jakarta. Een jaar na me geboorte zijn mijn ouders en ik verhuisd naar
