--- a/project.html
+++ b/project.html
@@ -47,7 +47,7 @@
 
     <div class="row">
      <div class="card text-start" style="width: 18rem;">
-       <img class="card-img-top" src="img/Screenshot 2023-06-17 122854.png" alt="Title">
+       <img class="card-img-top mt-3" src="img/Screenshot 2023-06-17 122854.png" alt="Title">
        <div class="card-body">
         <a href="hoger lager/indexHL.html" target="_blank"> <h4 class="card-title">Hoger Lager</h4></a>
          <p class="card-text">In dit</p>
@@ -55,7 +55,7 @@
      </div>
 
      <div class="card text-start ms-5" style="width: 18rem;">
-      <img class="card-img-top" src="img/whackamole.png" alt="Title">
+      <img class="card-img-top mt-3" src="img/whackamole.png" alt="Title">
       <div class="card-body">
         <a href=""> <h4 class="card-title">Whack a mole</h4></a>
         <p class="card-text">In dit</p>
@@ -63,7 +63,7 @@
      </div>
 
     <div class="card text-start ms-5" style="width: 18rem;">
-      <img class="card-img-top" src="img/bke.png" alt="Title">
+      <img class="card-img-top mt-3" src="img/bke.png" alt="Title">
       <div class="card-body">
         <a href=""> <h4 class="card-title">Boter kaas en eieren</h4></a>
         <p class="card-text">In dit</p>
@@ -75,7 +75,7 @@
 
   <div class="row mt-4">
     <div class="card text-start" style="width: 18rem;">
-      <img class="card-img-top" src="img/webcatalogus.png" alt="Title">
+      <img class="card-img-top mt-3" src="img/webcatalogus.png" alt="Title">
       <div class="card-body">
         <a href="sd22-p03-project-webcatalogus-t1n-habibi-main/index.html" target="_blank"><h4 class="card-title">Webcatalogus</h4></a>
         <p class="card-text">In dit</p>
@@ -83,7 +83,7 @@
     </div>
 
     <div class="card text-start ms-5" style="width: 18rem;">
-      <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+      <img class="card-img-top mt-3" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
         <a href=""> <h4 class="card-title">x</h4></a>
         <p class="card-text">In dit</p>
@@ -91,7 +91,7 @@
     </div>
 
     <div class="card text-start ms-5" style="width: 18rem;">
-      <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+      <img class="card-img-top mt-3" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
         <a href=""> <h4 class="card-title">x</h4></a>
         <p class="card-text">In dit</p>
