Meer files van projecten

--- a/project.html
+++ b/project.html
@@ -57,7 +57,7 @@
      <div class="card text-start ms-5" style="width: 18rem;">
       <img class="card-img-top mt-3" src="img/whackamole.png" alt="Title">
       <div class="card-body">
-        <a href=""> <h4 class="card-title">Whack a mole</h4></a>
+        <a href="sd22-themaweek-2-whack-a-mole-nandautomo-main/index.html" target="_blank"> <h4 class="card-title">Whack a mole</h4></a>
         <p class="card-text">In dit</p>
       </div>
      </div>
@@ -65,7 +65,7 @@
     <div class="card text-start ms-5" style="width: 18rem;">
       <img class="card-img-top mt-3" src="img/bke.png" alt="Title">
       <div class="card-body">
-        <a href=""> <h4 class="card-title">Boter kaas en eieren</h4></a>
+        <a href="BoterKaasEieren-main/Project/pvp.html" target="_blank"> <h4 class="card-title">Boter kaas en eieren</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
@@ -85,7 +85,7 @@
     <div class="card text-start ms-5" style="width: 18rem;">
       <img class="card-img-top mt-3" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
-        <a href=""> <h4 class="card-title">x</h4></a>
+        <a href="escape/Startscreen/index.html" target="_blank"> <h4 class="card-title">Escaperoom</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
@@ -93,7 +93,7 @@
     <div class="card text-start ms-5" style="width: 18rem;">
       <img class="card-img-top mt-3" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
-        <a href=""> <h4 class="card-title">x</h4></a>
+        <a href=""> <h4 class="card-title">Dashboard</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
