Alle cards verkleurd en achtergrond aangepast

--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
       </div>
 
     <div class="row">
-     <div class="card text-start" style="width: 18rem;">
+     <div class="card text-start bg-danger text-white" style="width: 18rem;">
        <img class="card-img-top mt-3" src="img/Screenshot 2023-06-17 122854.png" alt="Title">
        <div class="card-body">
         <a href="hoger lager/indexHL.html" target="_blank"> <h4 class="card-title">Hoger Lager</h4></a>
@@ -54,7 +54,7 @@
        </div>
      </div>
 
-     <div class="card text-start ms-5" style="width: 18rem;">
+     <div class="card text-start ms-5 bg-danger text-white" style="width: 18rem;">
       <img class="card-img-top mt-3" src="img/whackamole.png" alt="Title">
       <div class="card-body">
         <a href="sd22-themaweek-2-whack-a-mole-nandautomo-main/index.html" target="_blank"> <h4 class="card-title">Whack a mole</h4></a>
@@ -62,7 +62,7 @@
       </div>
      </div>
 
-    <div class="card text-start ms-5" style="width: 18rem;">
+    <div class="card text-start ms-5 bg-danger text-white" style="width: 18rem;">
       <img class="card-img-top mt-3" src="img/bke.png" alt="Title">
       <div class="card-body">
         <a href="BoterKaasEieren-main/Project/pvp.html" target="_blank"> <h4 class="card-title">Boter kaas en eieren</h4></a>
@@ -74,7 +74,7 @@
 <a></a>
 
   <div class="row mt-4">
-    <div class="card text-start" style="width: 18rem;">
+    <div class="card text-start bg-danger text-white" style="width: 18rem;">
       <img class="card-img-top mt-3" src="img/webcatalogus.png" alt="Title">
       <div class="card-body">
         <a href="sd22-p03-project-webcatalogus-t1n-habibi-main/index.html" target="_blank"><h4 class="card-title">Webcatalogus</h4></a>
@@ -82,7 +82,7 @@
       </div>
     </div>
 
-    <div class="card text-start ms-5" style="width: 18rem;">
+    <div class="card text-start ms-5 bg-danger text-white" style="width: 18rem;">
       <img class="card-img-top mt-3" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
         <a href="escape/Startscreen/index.html" target="_blank"> <h4 class="card-title">Escaperoom</h4></a>
@@ -90,7 +90,7 @@
       </div>
     </div>
 
-    <div class="card text-start ms-5" style="width: 18rem;">
+    <div class="card text-start ms-5 bg-danger text-white" style="width: 18rem;">
       <img class="card-img-top mt-3" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
         <a href=""> <h4 class="card-title">Dashboard</h4></a>
