--- a/contact.html
+++ b/contact.html
@@ -46,34 +46,34 @@
    </div>
    
    <div class="row">
-    <div class="card" style="width: 18rem;">
+    <div class="card bg-danger" style="width: 18rem;">
       <img src="img/discordlogo.png" class="card-img-top mt-3" alt="...">
       <div class="card-body">
-        <p class="card-text"><a href="https://discord.gg/FHMDRY6b" target="_blank">Discord</a></p>
+        <p class="card-text bg-white"><a href="https://discord.gg/FHMDRY6b" target="_blank">Discord</a></p>
       </div>
     </div>
   
 
   
-    <div class="card ms-5" style="width: 18rem;">
+    <div class="card ms-5 bg-danger" style="width: 18rem;">
       <img src="img/instalogo.jpg" class="card-img-top mt-3" alt="...">
       <div class="card-body">
-        <p class="card-text"><a href="https://www.instagram.com/nanda.nenz/" target="_blank">Instagram</a></p>
+        <p class="card-text bg-white"><a href="https://www.instagram.com/nanda.nenz/" target="_blank">Instagram</a></p>
       </div>
     </div>
   
 
-    <div class="card ms-5" style="width: 18rem;">
+    <div class="card ms-5 bg-danger" style="width: 18rem;">
       <img src="img/ytlogo.png" class="card-img-top mt-3" alt="...">
       <div class="card-body">
-        <p class="card-text"><a href="https://www.youtube.com/channel/UCUN357eVG-l5P1psPOulhyA" target="_blank">YouTube</a></p>
+        <p class="card-text bg-white"><a href="https://www.youtube.com/channel/UCUN357eVG-l5P1psPOulhyA" target="_blank">YouTube</a></p>
       </div>
     </div>
     </div>
  
-    <div class="card mt-4">
+    <div class="card mt-4 bg-danger text-white" style="width: 24rem;">
      <h5>E-mail: rizkynu10@gmail.com</h5>
-     <h5>Tel: 0612770181</h5>
+     <h5>Telefoon: 0612770181</h5>
     </div>
   
 
