--- a/dw.html
+++ b/dw.html
@@ -41,8 +41,34 @@
       <!-- cards met inhouden -->
       <div class="title bg-white">
         <h2>Achter het maken van dit project</h2>
-        <h5>Hier laat het zien hoe Nanda's portfolio is gemaakt</h5>
+        <h5>Hier laat het zien hoe en met wat Nanda's portfolio is gemaakt</h5>
         </div>
+
+    <div class="row">
+     <div class="card text-start bg-danger text-white mt-3" style="width: 24rem;">
+       <img class="card-img-top mt-3" src="img/Sitemapportfolio.png" alt="Title">
+       <div class="card-body">
+         <h4 class="card-title">Sitemap</h4>
+         <p class="card-text">Body</p>
+       </div>
+     </div>
+
+     <div class="card text-start bg-danger text-white mt-3" style="width: 24rem;">
+      <img class="card-img-top mt-3" src="img/kleur.png" alt="Title">
+      <div class="card-body">
+        <h4 class="card-title">Kleurenschema</h4>
+        <p class="card-text">Body</p>
+      </div>
+    </div>
+
+    <div class="card text-start bg-danger text-white mt-3" style="width: 24rem;">
+      <img class="card-img-top mt-3" src="holder.js/100px180/" alt="Title">
+      <div class="card-body">
+        <h4 class="card-title">Title</h4>
+        <p class="card-text">Body</p>
+      </div>
+    </div>
+   </div>
 
 
       
