--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
    <h5>Hier zijn de socials en contacten van Nanda te vinden</h5>
    </div>
    
-   <div class="row">
-    <div class="card bg-danger" style="width: 18rem;">
+   <div class="row ms-5">
+    <div class="card bg-danger mt-4" style="width: 18rem;">
       <img src="img/discordlogo.png" class="card-img-top mt-3" alt="...">
       <div class="card-body">
         <p class="card-text bg-white"><a href="https://discord.gg/FHMDRY6b" target="_blank">Discord</a></p>
@@ -55,7 +55,7 @@
   
 
   
-    <div class="card ms-5 bg-danger" style="width: 18rem;">
+    <div class="card ms-5 bg-danger mt-4" style="width: 18rem;">
       <img src="img/instalogo.jpg" class="card-img-top mt-3" alt="...">
       <div class="card-body">
         <p class="card-text bg-white"><a href="https://www.instagram.com/nanda.nenz/" target="_blank">Instagram</a></p>
@@ -63,7 +63,7 @@
     </div>
   
 
-    <div class="card ms-5 bg-danger" style="width: 18rem;">
+    <div class="card ms-5 bg-danger mt-4" style="width: 18rem;">
       <img src="img/ytlogo.png" class="card-img-top mt-3" alt="...">
       <div class="card-body">
         <p class="card-text bg-white"><a href="https://www.youtube.com/channel/UCUN357eVG-l5P1psPOulhyA" target="_blank">YouTube</a></p>
@@ -71,7 +71,7 @@
     </div>
     </div>
  
-    <div class="card mt-4 bg-danger text-white" style="width: 24rem;">
+    <div class="card mt-4 ms-5 bg-danger text-white" style="width: 24rem;">
      <h5>E-mail: rizkynu10@gmail.com</h5>
      <h5>Telefoon: 0612770181</h5>
     </div>
