--- a/dw.html
+++ b/dw.html
@@ -44,32 +44,40 @@
         <h5>Hier laat het zien hoe en met wat Nanda's portfolio is gemaakt</h5>
         </div>
 
-    <div class="row">
+    <div class="row ms-5">
      <div class="card text-start bg-danger text-white mt-3" style="width: 24rem;">
        <img class="card-img-top mt-3" src="img/Sitemapportfolio.png" alt="Title">
        <div class="card-body">
          <h4 class="card-title">Sitemap</h4>
-         <p class="card-text">Body</p>
+         <p class="card-text"></p>
        </div>
      </div>
 
-     <div class="card text-start bg-danger text-white mt-3" style="width: 24rem;">
+     <div class="card text-start bg-danger text-white ms-3 mt-3" style="width: 24rem;">
       <img class="card-img-top mt-3" src="img/kleur.png" alt="Title">
       <div class="card-body">
         <h4 class="card-title">Kleurenschema</h4>
-        <p class="card-text">Body</p>
+        <p class="card-text"></p>
       </div>
     </div>
 
-    <div class="card text-start bg-danger text-white mt-3" style="width: 24rem;">
-      <img class="card-img-top mt-3" src="holder.js/100px180/" alt="Title">
+    <div class="card text-start bg-danger text-white ms-3 mt-3" style="width: 24rem;">
+      <img class="card-img-top mt-3" src="img/indoflag.png" alt="Title">
       <div class="card-body">
-        <h4 class="card-title">Title</h4>
-        <p class="card-text">Body</p>
+        <h4 class="card-title">Inspiratie</h4>
+        <p class="card-text">Het thema van dit portfolio is gebaseerd op de 2 kleuren van de Indonesische vlag, rood en wit.</p>
       </div>
     </div>
    </div>
 
+   <div class="card text-start text-white bg-danger mt-3 ms-5" style="width: 36rem;">
+     <div class="card-body">
+       <h4 class="card-title">Omschrijving</h4>
+       <p class="card-text">Dit portfolio over Nanda is zelf door hem gemaakt. Het doel hiervan is om Nanda een beetje te kennen en 
+        zien wat hij dit schooljaar gedaan heeft.
+       </p>
+     </div>
+   </div>
 
       
     
