--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <h2>About Nanda</h2>
   </div>
 
- <div class="row">
+ <div class="row ms-5">
   <div class="card bg-danger mt-5" style="width: 18rem;">
     <img src="img/gamepic.jpg" class="card-img-top mt-3" alt="...">
     <div class="card-body">
