--- a/project.html
+++ b/project.html
@@ -45,11 +45,11 @@
         <h5>Dit zijn projecten waar Nanda dit schooljaar heeft gemaakt</h5>
       </div>
 
-    <div class="row">
+    <div class="row ms-5">
      <div class="card text-start bg-danger text-white" style="width: 18rem;">
        <img class="card-img-top mt-3" src="img/Screenshot 2023-06-17 122854.png" alt="Title">
        <div class="card-body">
-        <a href="hoger lager/indexHL.html" target="_blank"> <h4 class="card-title">Hoger Lager</h4></a>
+        <a href="hoger lager/indexHL.html" target="_blank"> <h4 class="card-title bg-white">Hoger Lager</h4></a>
          <p class="card-text">In dit</p>
        </div>
      </div>
@@ -57,7 +57,7 @@
      <div class="card text-start ms-5 bg-danger text-white" style="width: 18rem;">
       <img class="card-img-top mt-3" src="img/whackamole.png" alt="Title">
       <div class="card-body">
-        <a href="sd22-themaweek-2-whack-a-mole-nandautomo-main/index.html" target="_blank"> <h4 class="card-title">Whack a mole</h4></a>
+        <a href="sd22-themaweek-2-whack-a-mole-nandautomo-main/index.html" target="_blank"> <h4 class="card-title bg-white">Whack a mole</h4></a>
         <p class="card-text">In dit</p>
       </div>
      </div>
@@ -65,19 +65,27 @@
     <div class="card text-start ms-5 bg-danger text-white" style="width: 18rem;">
       <img class="card-img-top mt-3" src="img/bke.png" alt="Title">
       <div class="card-body">
-        <a href="BoterKaasEieren-main/Project/pvp.html" target="_blank"> <h4 class="card-title">Boter kaas en eieren</h4></a>
+        <a href="BoterKaasEieren-main/Project/pvp.html" target="_blank"> <h4 class="card-title bg-white">Boter kaas en eieren</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
    </div> 
 
-<a></a>
 
-  <div class="row mt-4">
+
+  <div class="row mt-4 ms-5">
     <div class="card text-start bg-danger text-white" style="width: 18rem;">
       <img class="card-img-top mt-3" src="img/webcatalogus.png" alt="Title">
       <div class="card-body">
-        <a href="sd22-p03-project-webcatalogus-t1n-habibi-main/index.html" target="_blank"><h4 class="card-title">Webcatalogus</h4></a>
+        <a href="sd22-p03-project-webcatalogus-t1n-habibi-main/index.html" target="_blank"><h4 class="card-title bg-white">Webcatalogus</h4></a>
+        <p class="card-text">In dit</p>
+      </div>
+    </div>
+
+    <div class="card text-start ms-5 bg-danger text-white" style="width: 18rem;">
+      <img class="card-img-top mt-3" src="img/escaperoom.png" alt="Title">
+      <div class="card-body">
+        <a href="escape/Startscreen/index.html" target="_blank"> <h4 class="card-title bg-white">Escaperoom</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
@@ -85,15 +93,7 @@
     <div class="card text-start ms-5 bg-danger text-white" style="width: 18rem;">
       <img class="card-img-top mt-3" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
-        <a href="escape/Startscreen/index.html" target="_blank"> <h4 class="card-title">Escaperoom</h4></a>
-        <p class="card-text">In dit</p>
-      </div>
-    </div>
-
-    <div class="card text-start ms-5 bg-danger text-white" style="width: 18rem;">
-      <img class="card-img-top mt-3" src="holder.js/100px180/" alt="Title">
-      <div class="card-body">
-        <a href=""> <h4 class="card-title">Dashboard</h4></a>
+        <a href=""> <h4 class="card-title bg-white">Dashboard</h4></a>
         <p class="card-text">In dit</p>
       </div>
     </div>
