--- a/project.html
+++ b/project.html
@@ -50,7 +50,7 @@
        <img class="card-img-top mt-3" src="img/Screenshot 2023-06-17 122854.png" alt="Title">
        <div class="card-body">
         <a href="hoger lager/indexHL.html" target="_blank"> <h4 class="card-title bg-white">Hoger Lager</h4></a>
-         <p class="card-text">In dit</p>
+         <p class="card-text">In dit project speel je tegen een bot en moet je raden of de dobbelstenen die je gooit hoger of lager zijn dan de bot.</p>
        </div>
      </div>
 
@@ -58,7 +58,7 @@
       <img class="card-img-top mt-3" src="img/whackamole.png" alt="Title">
       <div class="card-body">
         <a href="sd22-themaweek-2-whack-a-mole-nandautomo-main/index.html" target="_blank"> <h4 class="card-title bg-white">Whack a mole</h4></a>
-        <p class="card-text">In dit</p>
+        <p class="card-text">Dit is een game waar je heel snel op de kikker moet klikken om punten te krijgen. Deze game is gebaseerd op "Whack a mole".</p>
       </div>
      </div>
 
@@ -66,7 +66,7 @@
       <img class="card-img-top mt-3" src="img/bke.png" alt="Title">
       <div class="card-body">
         <a href="BoterKaasEieren-main/Project/pvp.html" target="_blank"> <h4 class="card-title bg-white">Boter kaas en eieren</h4></a>
-        <p class="card-text">In dit</p>
+        <p class="card-text">Een spel waar je 3 op een rij moet scoren om te winnen tegen iemand of een bot.</p>
       </div>
     </div>
    </div> 
@@ -78,7 +78,7 @@
       <img class="card-img-top mt-3" src="img/webcatalogus.png" alt="Title">
       <div class="card-body">
         <a href="sd22-p03-project-webcatalogus-t1n-habibi-main/index.html" target="_blank"><h4 class="card-title bg-white">Webcatalogus</h4></a>
-        <p class="card-text">In dit</p>
+        <p class="card-text">Dit project heeft een pagina die vertelt over games gemaakt door allerlei bedrijven.</p>
       </div>
     </div>
 
@@ -86,7 +86,7 @@
       <img class="card-img-top mt-3" src="img/escaperoom.png" alt="Title">
       <div class="card-body">
         <a href="escape/Startscreen/index.html" target="_blank"> <h4 class="card-title bg-white">Escaperoom</h4></a>
-        <p class="card-text">In dit</p>
+        <p class="card-text">Hier speel je een verhaal waar je moet ontsnappen uit een plek door vele puzzels op te lossen.</p>
       </div>
     </div>
 
@@ -94,7 +94,7 @@
       <img class="card-img-top mt-3" src="holder.js/100px180/" alt="Title">
       <div class="card-body">
         <a href=""> <h4 class="card-title bg-white">Dashboard</h4></a>
-        <p class="card-text">In dit</p>
+        <p class="card-text">x</p>
       </div>
     </div>
   </div>
